tests/baselines/reference/binary-invalid-leading.errors.txt
binary-invalid-leading.ts(22,1): error TS1121: Octal literals are not allowed. Use the syntax '0o0'.
binary-invalid-leading.ts(22,3): error TS1005: ';' expected.
binary-invalid-leading.ts(22,3): error TS2304: Cannot find name 'b0'.


==== binary-invalid-leading.ts (3 errors) ====
    // Copyright (C) 2015 the V8 project authors. All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    es6id: 11.8.3
    description: Binary-integer-literal-like sequence with a leading 0
    info: |
        BinaryIntegerLiteral ::
          0b BinaryDigits
          0B BinaryDigits
        BinaryDigits ::
          BinaryDigit
          BinaryDigits BinaryDigit
        BinaryDigit :: one of
          0 1
    negative:
      phase: parse
      type: SyntaxError
    ---*/
    
    
    00b0;
    ~~
!!! error TS1121: Octal literals are not allowed. Use the syntax '0o0'.
      ~~
!!! error TS1005: ';' expected.
      ~~
!!! error TS2304: Cannot find name 'b0'.
    